--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ install:
 
 script:
   - echo "Reached Script Section"
-  - gcc   	Linkfile_multifile/demofile2.c Linkfile_multifile/file1.c  	Linkfile_multifile/file2.c -o output
+  - gcc   Sum_Fivedigits.c -o output
   - ./output
