--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ install:
 
 script:
   - echo "Reached Script Section"
-  - gcc   Sum_Fivedigits.c -o output
+  - gcc   Sum_Fivedigits.c Calculate_Sumdigits.c -o output
   - ./output
