--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ script:
   - echo "Reached Script Section"
   - gcc   Sum_Fivedigits.c Calculate_Sumdigits.c -o output
   - ./output
+  - echo "Reached Script Section - cunit_democode"
+  - gcc   	Sum_FiveDigits_cunit.c -o cunit_Sum_FiveDigits -lcunit
+  - ./cunit_Sum_FiveDigits
