--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ script:
   - gcc   Sum_Fivedigits.c Calculate_Sumdigits.c -o output
   - ./output
   - echo "Reached Script Section - cunit_democode"
-  - gcc   	Sum_FiveDigits_cunit.c -o cunit_Sum_FiveDigits -lcunit
+  - gcc   	Sum_FiveDigits_cunit.c Calculate_Sumdigits.c -o cunit_Sum_FiveDigits -lcunit
   - ./cunit_Sum_FiveDigits
